<resources>
    <string name="app_name">Park7</string>
    <string name="splash_screen_text">Park7</string>
    <string name="splash_screen_permissions_text">Omogoči zahtevana dovoljenja,\n ki so ključna za delovanje aplikacije!</string>

    <string name="login_button_login">Vstop</string>
    <string name="login_register_button">Registracija</string>
    <string name="login_button_newUser">Nov uporabnik</string>
    <string name="login_edittext_existingUser">Obstoječi uporabnik</string>
    <string name="login_edittext_loginEmail">Uporabnik</string>
    <string name="login_loginPassword">Geslo</string>
    <string name="login_registerPassword_repeat">Ponovi geslo</string>
    <string name="login_registerFirstName">Ime</string>
    <string name="login_registerLastName">Priimek</string>
    <string name="login_registerTaxNumber">Davčna številka</string>


    <string name="login_exception_wrong_password">Napačno geslo!</string>
    <string name="login_exception_wrong_username">Uporabnik ne obstaja!</string>
    <string name="login_exception_existing_username">Ta uporabnik že obstaja!</string>
    <string name="login_exception_weak_password">Preveč šibko geslo!</string>
    <string name="login_exception_try_later">Poskusi kasneje.</string>
    <string name="login_exception_default">Uporabniško ime(email) ali geslo je neustrezeno</string>
    <string name="login_exception_invalid">Preveri vnešene podatke!</string>
    <string name="login_register_password_missmatch">Gesla se ne ujemata!</string>
    <string name="login_register_invalid_taxNumber">Napačna davčna številka!</string>

    <string name="tabs_name_maps">Zemljevid</string>
    <string name="tabs_name_settings">Nastavitve</string>

    <string name="location_rent_start">Zasedi</string>
    <string name="location_rent_end">Zapusti</string>
    <string name="location_add">Dodaj</string>
    <string name="location_remove">Odstrani</string>
    <string name="location_image_description">Predogled parkirnega prostora</string>
    <string name="location_time_dedline_description">Parkiranje najkasneje do</string>
    <string name="location_time_deadline">Najkasneje do:</string>
    <string name="location_location_description">Lokacija parkirišča</string>
    <string name="location_cost">Cena parkiranja na uro</string>
    <string name="location_cost_risk">Kavcija</string>
    <string name="location_owner">Lastnik parkirišča</string>
    <string name="location_description">Opis parkirišča</string>

    <string name="location_street">Ulični naslov</string>
    <string name="location_city">Mesto</string>
    <string name="location_country">Država</string>
    <string name="location_justCost">Cena</string>
    <string name="location_justCost_perHour">€/uro</string>
    <string name="location_justInusrance_cost">€</string>
    <string name="location_image_contentDescription">Klikni za izbiro slike</string>
    <string name="location_timeStart_default">00:00</string>
    <string name="location_timeEnd_default">24:00</string>
    <string name="location_invalid_price">Neveljavna cena!</string>
    <string name="location_invalid_insurance">Neveljavna kavcija!</string>

    <string name="general_hour">ura</string>
    <string name="general_loading">Pripravljam...</string>
    <string name="general_error">Napaka!</string>
    <string name="general_success">Uspešno!</string>
    <string name="general_deleted">Izbrisano!</string>
    <string name="general_wait">Počakaj...</string>
    <string name="general_wait_forRelease">Počakaj, da se parkirišče sprosti!</string>
    <string name="general_release_first">Najprej zaključi trenutni najem!</string>
    <string name="general_notImplemented">V izdelavi...</string>

    <string name="map_marker_own">Lasten</string>
    <string name="map_marker_taken">Zaseden</string>
    <string name="map_marker_renting">Moj najet park</string>
    <string name="map_marker_free">Na voljo</string>

    <string name="core_amRenting">(Najemam)</string>

    <string name="recap_thanks">Hvala!</string>
    <string name="recap_time_recap">Čas parkiranja</string>
    <string name="recap_cost_recap">Cena</string>
    <string name="recap_return">Nazaj</string>

</resources>
