<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/login_edittext_loginEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/login_button_loginPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bMain"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        android:text="@string/login_button_login"
        android:textColor="#FFFF" />


    <Button
        android:id="@+id/bSwitch"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:background="@null"
        android:text="@string/login_button_newUser"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent" />

</LinearLayout>