<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvThanks"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:text="@string/recap_thanks"
        android:textColor="#FFFFFF"
        android:textSize="70sp" />

    <ImageView
        android:id="@+id/ivRecapPicture"
        android:layout_width="320dp"
        android:layout_height="270dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/location_image_contentDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp">

        <ImageView
            android:id="@+id/ivStar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_star_empty_50dp" />

        <ImageView
            android:id="@+id/ivStar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_star_empty_50dp" />

        <ImageView
            android:id="@+id/ivStar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_star_empty_50dp" />

        <ImageView
            android:id="@+id/ivStar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_star_empty_50dp" />

        <ImageView
            android:id="@+id/ivStar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_star_empty_50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/tvRecapTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/recap_time_recap"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvRecapCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/recap_cost_recap"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>